[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/freq used/Camera2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://art assets/nodes/button_texture.png" type="Texture" id=2]
[ext_resource path="res://scenes/freq used/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/chase.gd" type="Script" id=4]
[ext_resource path="res://scripts/sub timer.gd" type="Script" id=5]

[node name="chase base" type="Node2D"]
script = ExtResource( 4 )

[node name="Camera2D" parent="." instance=ExtResource( 1 )]

[node name="timer holder" type="Node2D" parent="."]

[node name="top timer" type="Timer" parent="timer holder"]
wait_time = 5.0
one_shot = true

[node name="top" type="Timer" parent="timer holder/top timer"]
wait_time = 2.0
one_shot = true
script = ExtResource( 5 )

[node name="right timer" type="Timer" parent="timer holder"]
wait_time = 5.0
one_shot = true

[node name="right" type="Timer" parent="timer holder/right timer"]
wait_time = 2.0
one_shot = true
script = ExtResource( 5 )

[node name="bot timer" type="Timer" parent="timer holder"]
wait_time = 5.0
one_shot = true

[node name="bot" type="Timer" parent="timer holder/bot timer"]
wait_time = 2.0
one_shot = true
script = ExtResource( 5 )

[node name="button holder" type="Node2D" parent="."]

[node name="top button" type="Button" parent="button holder"]
margin_left = 450.0
margin_top = 100.0
margin_right = 525.0
margin_bottom = 175.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="button holder/top button"]
position = Vector2( 37.5, 37.5 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="right button" type="Button" parent="button holder"]
margin_left = 700.0
margin_top = 225.0
margin_right = 775.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="button holder/right button"]
position = Vector2( 37.5, 37.5 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="bot button" type="Button" parent="button holder"]
margin_left = 450.0
margin_top = 350.0
margin_right = 525.0
margin_bottom = 425.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="button holder/bot button"]
position = Vector2( 37.5, 37.5 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="player" parent="." instance=ExtResource( 3 )]
position = Vector2( 320, 310 )

[node name="Sprite" parent="player" index="0"]
position = Vector2( -15, -45 )
scale = Vector2( 5, 5 )

[node name="CollisionShape2D" parent="player" index="1"]
position = Vector2( -15, -45 )

[node name="winLimit" type="Timer" parent="."]
wait_time = 40.0
autostart = true
[connection signal="timeout" from="timer holder/top timer" to="timer holder/top timer/top" method="_on_top_timer_timeout"]
[connection signal="timeout" from="timer holder/top timer/top" to="." method="_on_top_timeout"]
[connection signal="timeout" from="timer holder/right timer" to="timer holder/right timer/right" method="_on_right_timer_timeout"]
[connection signal="timeout" from="timer holder/right timer/right" to="." method="_on_right_timeout"]
[connection signal="timeout" from="timer holder/bot timer" to="timer holder/bot timer/bot" method="_on_bot_timer_timeout"]
[connection signal="timeout" from="timer holder/bot timer/bot" to="." method="_on_bot_timeout"]
[connection signal="pressed" from="button holder/top button" to="." method="_on_top_button_pressed"]
[connection signal="pressed" from="button holder/right button" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="button holder/bot button" to="." method="_on_bot_buttton_pressed"]
[connection signal="timeout" from="winLimit" to="." method="_on_winLimit_timeout"]

[editable path="player"]
